# tavus-pipecat-quickstart

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  tavus-pipecat.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  webrtc-client.js
frontend/src/components/: VideoConversation.css  VideoConversation.js
