[project]
name = "tavus-pipecat-quickstart"
version = "0.1.0"
description = "Tavus quickstart for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[daily,webrtc,silero,deepgram,google,cartesia,runner,local-smart-turn-v3]>=0.0.88",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

